--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
 <navbar></navbar>
+
 <div class="container my-3">
     <div class="row">
-        <div class="col-12">
-            <product-list></product-list>
+        <div class="col-3">
+            <category-list></category-list>
+        </div>
+        <div class="col-9">
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
