--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,43 +1,35 @@
-<div *ngIf="products.length > 0; else noProducts">
-    <ng-template [ngTemplateOutlet]="productList1" [ngTemplateOutletContext]="{products: products}"></ng-template>
-    <ng-template  [ngTemplateOutlet]="productList2" [ngTemplateOutletContext]="{products: products}"></ng-template>
-</div>
+<div *ngIf="!loading">
 
-<ng-template #productList1 let-products="products">
-    <h2>Top Selled</h2>
-    <div *ngFor="let product of products">
-        <div *ngIf="product.isActive" class="card mb-3">
-            <div class="row">
-                <div class="col-3">
-                    <img src="assets/images/{{ product.imageURL }}" alt="" class="img-fluid rounded-start p-200">
-                </div>
-                <div class="col-9">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ product.name }}</h5>
-                        <p class="card-text">{{ product.description }}</p>
+    <div *ngIf="products.length > 0; else noProducts">
+        <ng-template [ngTemplateOutlet]="productList" [ngTemplateOutletContext]="{products: products}"></ng-template>
+    </div>
+
+    <ng-template #productList let-products="products">
+        <h2>Top Selled</h2>
+        <div *ngFor="let product of products">
+            <div *ngIf="product.isActive" class="card mb-3 p-2">
+                <div class="row">
+                    <div class="col-3">
+                        <img src="assets/images/{{ product.imageURL }}" alt="" class="img-fluid rounded-start p-200">
+                    </div>
+                    <div class="col-9">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ product.name }}</h5>
+                            <a routerLink="/products/{{product.id}}" class="btn btn-primary">Descriptions</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</ng-template>
-<ng-template #productList2 let-products="products">
-    <h2>Top Liked</h2>
-    <div class="row">
-        <div *ngFor="let product of products" class="col-3">
-            <div *ngIf="product.isActive" class="card mb-3">
-                <img src="assets/images/{{ product.imageURL }}" alt="" class="card-img-top">
-                <div class="card-body">
-                    <h5 class="card-title">{{ product.name }}</h5>
-                    <p class="card-text">{{ product.description }}</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</ng-template>
+    </ng-template>
 
-<ng-template #noProducts>
-    <div class="alert alert-warning">
-        No products!
-    </div>
-</ng-template>
+    <ng-template #noProducts>
+        <div class="alert alert-warning">
+            No products!
+        </div>
+    </ng-template>
+</div>
+
+<div *ngIf="loading" class="spinner-border text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+</div>
